# Talos_Kain

./: .gitignore  README.md  ROADMAP.md  aamsfc.md  pyproject.toml
.github/: pull_request_template.md
architecture/: Architecture.md  Contracts.md  DecisionLog.md  Dependencies.md  Flows.md  Interfaces.md  Modules.md  README.md  Schemas.md  Types.md
architecture/diagrams/: architecture_graph.md  execution_map.md  system_flow.md
configs/: default.toml  logging.toml  sc2_easy.toml
docs/: BACKLOG.md  architecture.md  north_star.md
docs/decisions/: 0001-language-and-skeleton.md
docs/diagrams/: README.md
rust/: Cargo.toml  README.md
rust/hot_cache/: .gitkeep
scripts/: run_mock.py
talos/: __init__.py
talos/domain/: __init__.py  gate.py  identity.py  ports.py  reward.py  telos.py  types.py
talos/infrastructure/: __init__.py
talos/infrastructure/environments/: __init__.py
talos/infrastructure/environments/mock/: __init__.py  mock_env.py
talos/infrastructure/storage/: __init__.py
talos/infrastructure/telemetry/: __init__.py  logging.py  metrics.py  tracing.py
talos/services/: __init__.py  consolidation.py  cortex.py  identity_crucible.py  immune.py  metacognition.py  motor.py  organism.py  planner.py  policy.py  purpose.py  reflection.py  reflex.py  reward_engine.py  scheduler.py  sensorium.py  skill_extraction.py  skill_lifecycle.py  sleep.py
talos/util/: __init__.py  ids.py
tests/: conftest.py  test_audit_chain.py  test_drift.py  test_gate.py  test_learning.py  test_self_model.py
tools/: invariant_lint.py  mermaid_graph.py
(+16 files in other folders)
